Added a new file Day 2 of 30days of coding

--- a/02-Music Player/styles.css
+++ b/02-Music Player/styles.css
@@ -45,6 +45,13 @@ nav .circle {
   border-radius: 50%;
   border: 8px solid #fff;
   box-shadow: 0 10px 60px rgba(255, 26, 26, 0.22);
+  animation: round 3s linear infinite;
+}
+
+@keyframes round {
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .music-player h1 {
